@@ -1,4 +1,5 @@
-engines:
+version: "2"
+plugins:
   # https://docs.codeclimate.com/docs/eslint
   # ES Linting requires an .eslintrc file to tweak checks.
   eslint:
@@ -125,18 +126,8 @@ engines:
       - todo
       - dpm
       - dsm
-ratings:
-  paths:
-  - "**.inc"
-  - "**.module"
-  - "**.profile"
-  - "**.php"
-  - "**.install"
-  - "**.scss"
-  - "**.sass"
-  - "**.js"
 # exclude these files/paths
-exclude_paths:
+exclude_patterns:
 - "**.features.**"
 - "**.views_default.inc"
 - "**.field_group.inc"
