@@ -2,7 +2,7 @@ name = Stanford FAQ Related Show-Hide View
 description = FAQs view with bootstrap collapse (show/hide) classes. Displays FAQs related to the page.
 core = 7.x
 package = Stanford
-version = 7.x-4.3-dev
+version = 7.x-4.3
 project = stanford_faq_related_show_hide_view
 dependencies[] = ctools
 dependencies[] = faq
