@@ -2,7 +2,7 @@ name = Stanford FAQ related views
 description = Displays FAQs related to the taxonomy terms on the page.
 core = 7.x
 package = Stanford
-version = 7.x-4.3-dev
+version = 7.x-4.3
 project = stanford_faq_related_views
 dependencies[] = ctools
 dependencies[] = faq
