@@ -2,7 +2,7 @@ name = Stanford FAQ show/hide hierarchy
 description = FAQs view with bootstrap collapse (show/hide) classes. Displays FAQs within the hierarchy related to the page.
 core = 7.x
 package = Stanford
-version = 7.x-4.3-dev
+version = 7.x-4.3
 project = stanford_faq_show_hide_hierarchy
 dependencies[] = ctools
 dependencies[] = faq
