@@ -2,7 +2,7 @@ name = Stanford FAQ
 description = FAQ Content type and manage view
 core = 7.x
 package = Stanford
-version = 7.x-4.3-dev
+version = 7.x-4.3
 project = stanford_faq
 dependencies[] = ctools
 dependencies[] = faq
