@@ -1,6 +1,14 @@
 Stanford FAQ
 -------------------------------------------------
 
+7.x-4.3                               2018-08-27
+------------------------------------------------
+- Added the related faq view to css rules
+- Added dependencies to stanford_faq_related_show_hide_view
+- Added dependencies to stanford_faq_related__views
+- Added dependencies to stanford_faq_show_hide_hierarchy
+- Fix issues in the .codeclimate.yml file for Version 2
+
 7.x-4.2                               2018-06-26
 ------------------------------------------------
 - Added codeclimate.yml
